--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<body>"ホンキグループ・石ころビューアー"</body>
+<head><title>ホンキグループ・石ころビューアー</head>
+<body>
 <input type="text" id="search-box" placeholder="検索する用語を入力してください">
+</body>
 <div id="results"></div>
 <script type="text/javascript" src="main.js"></script>
