--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>ホンキグループ・石ころビューアーVr,1.0.0</head>
+<head>石ころビューアーVr,1.0.0</head>
 <body>
 <input type="text" id="search-box" placeholder="検索する用語を入力してください">
 </body>
