--- a/index.html
+++ b/index.html
@@ -1,6 +1,184 @@
-<head>石ころビューアーVr,1.0.1</head>
-<body>
-<input type="text" id="search-box" placeholder="検索する用語を入力してください">
+<h1>石ころビューアーVr,1.0.2</h1>
+<head>
+	<title>Dark/Light Mode Toggle</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="script.js"></script>
+</head>
+<body id=dark>
+	<button id="mode-toggle"> ダークモード</button>
 </body>
-<div id="results"></div>
+  <head>
+    <style>
+      #modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+      #modal-content {
+        display: block;
+        position: relative;
+        background-color: #fff;
+        margin: 10% auto;
+        padding: 20px;
+        width: 90%;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+      }  
+      #close {
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+      } 
+    </style>
+  </head>
+  <body>
+    <button id="open-modal">説明を開く</button>
+    <div id="modal">
+      <div id="modal-content">
+        <span id="close">&times;</span>
+        <p>当サイトは、Googleが提供しているyoutubeの動画のサムネイル、タイトル、概要欄の一部が見れるサイトで、環境によってはYoutubeの動画の埋め込みが表示されます。<br><br>また、YouTubeの動画をダウンロード、視聴したい場合は、<A href=“https://onlinevideoconverter.com/ja/youtube-converter”></a><br><br>ざっくりとした説明は、Googleが提供しているyoutubeの動画が見られる「やつ」を使い、html js cssを使い、表示しています。<br><br>詳しい説明(developer向け)は、Googleが提供しているyoutubeの動画情報が取得できるapi、youtube data api v3を使い、google cloudでapiキーを取得し、javascriptでyoutube data api v3のエンドポイントURLを指定し、APIリクエストをapiキーを使って有効化し、各動画情報を閲覧すると言った仕組みです<br><br>このコードはGitHub上で閲覧できます。また、このサービスを通して当社は本サイト掲載情報の利用によって利用者等に何らかの損害が発生したとしても、かかる損害については一切の責任を負いません。<br><br>本サイトは「りんた」によって作成されました。連絡については、discordの、<A href="https://discord.gg/DxEungZpce">私のdiscordサーバー(https://discord.gg/DxEungZpce)</A> または、raindrop#7658までお気軽にご連絡ください。</p>
+      </div>
+    </div>
+    <script>
+      var openModal = document.getElementById("open-modal");
+      var modal = document.getElementById("modal");
+      var closeBtn = document.getElementById("close");
+      
+      openModal.onclick = function() {
+        modal.style.display = "block";
+      };
+      
+      closeBtn.onclick = function() {
+        modal.style.display = "none";
+      };
+    </script>
+  </body>
+<style>
+.search-box {
+    position: relative;
+    width: 70%;
+    transform: translate(0%, -10%);
+}
+  }
+</style>
+<input type="text" id="search-box" placeholder="検索する言葉を入力してください...">
+  <div id="results"></div>
+<script type="text/javascript" src="main.js"></script>
+<style>
+h1 {
+  position: relative;
+  color: #158b2b;
+  font-size: 20px;
+  padding: 10px 0;
+  text-align: center;
+  margin: 1.5em 0;
+}
+h1:before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: 50%;
+  width: 150px;
+  height: 58px;
+  border-radius: 50%;
+  border: 5px solid #a6ddb0;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+.dark {
+	background-color: #F0F8FF; /* default light mode background color */
+	color: #000000; /* default light mode text color */
+}
+
+.dark-mode {
+	background-color: #1E1E1E; /* dark mode background color */
+	color: #FFFFFF; /* dark mode text color */
+}
+.mode-toggle {
+    position: fixed;
+    top: 30%;
+    left: 15%;
+    width: 25%;
+    transform: translate(-50%, -50%);
+  }
+
+ .results {
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+</style>
+<script>
+const toggleBtn = document.getElementById("mode-toggle");
+const body = document.body;
+
+toggleBtn.addEventListener("click", function() {
+	body.classList.toggle("dark-mode");
+});
+// APIキーを設定
+const API_KEY = 'AIzaSyDfFr3mb1R0EhvZ8MfbvYH4jC7QWh8658A';
+
+// エンドポイントURLを設定
+const ENDPOINT_URL = 'https://www.googleapis.com/youtube/v3/search';
+const searchBox = document.getElementById('search-box');
+const results = document.getElementById('results');
+
+searchBox.addEventListener('change', (event) => {
+    const query = event.target.value;
+
+    // APIリクエストを作成
+    const request = `${ENDPOINT_URL}?part=snippet&q=${query}&type=video&key=${API_KEY}`;
+
+    // APIリクエストを送信
+    fetch(request)
+        .then(response => response.json())
+        .then(data => {
+            const items = data.items;
+            renderResults(items);
+        });
+});
+function renderResults(items) {
+    results.innerHTML = '';
+
+    items.forEach(item => {
+        // 動画タイトルと説明を取得
+        const title = item.snippet.title;
+        const description = item.snippet.description;
+
+        // 動画IDを取得
+        const videoId = item.id.videoId;
+
+        // 動画サムネイルのURLを取得
+        const thumbnailUrl = item.snippet.thumbnails.medium.url;
+
+        // 動画のダウンロードリンクを作成
+        const downloadLink = `<a href="https://www.youtube.com/watch?v=${videoId}&feature=youtu.be" download>${title}</a>`;
+
+        // HTMLを作成
+        const html = `
+      <div>
+        <img src="${thumbnailUrl}">
+        <div>
+          <h2>${downloadLink}</h2>
+          <p>${description}</p>
+        </div>
+      </div>
+      <h2>
+      <iframe width="642" height="361" src="https://www.youtube.com/embed/${videoId}" title="${title}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </h2>
+    `;
+
+        results.insertAdjacentHTML('beforeend', html);
+    });
+}
+</script>
 <script type="text/javascript" src="main.js"></script>
