--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <button id="open-modal">説明を開く</button>
+    <button id="open-modal">サイトの説明</button>
     <div id="modal">
       <div id="modal-content">
         <span id="close">&times;</span>
