--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body id=dark>
 	<button id="mode-toggle"> ダークモード</button>
 </body>
+<body>
+	<button onclick="location.href='https://rintaro-s.github.io/unity-test/'>ボールを落とすな！(自作ミニゲーム)</button>
+</body>
   <head>
     <style>
       #modal {
