--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<button id="mode-toggle"> ダークモード</button>
 </body>
 <body>
-	<button onclick="location.href='https://rintaro-s.github.io/unity-test/'>ボールを落とすな！(自作ミニゲーム)</button>
+	<button onclick=location.href='https://rintaro-s.github.io/unity-test/'>ボールを落とすな！(自作ミニゲーム)'"</button>
 </body>
   <head>
     <style>
