--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>石ころビューアーVr,1.0.2</h1>
+<h1>石ころビューアーVr,1.0.</h1>
 <head>
 	<title>Dark/Light Mode Toggle</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
