--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>石ころビューアーVr,1.0.3</h1>
+<h1>石ころビューアーVr,1.0.4</h1>
 <head>
 	<title>Dark/Light Mode Toggle</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -45,7 +45,7 @@
     <div id="modal">
       <div id="modal-content">
         <span id="close">&times;</span>
-        <p>当サイトは、Googleが提供しているyoutubeの動画のサムネイル、タイトル、概要欄の一部が見れるサイトで、環境によってはYoutubeの動画の埋め込みが表示されます。<br><br>また、YouTubeの動画をダウンロード、視聴したい場合は、<A href="https://onlinevideoconverter.com/ja/youtube-converter">このサイト（外部サイト）</A>を使用してください<br><br>ざっくりとした説明は、Googleが提供しているyoutubeの動画が見られる「やつ」を使い、html js cssを使い、表示しています。<br><br>詳しい説明(developer向け)は、Googleが提供しているyoutubeの動画情報が取得できるapi、youtube data api v3を使い、google cloudでapiキーを取得し、javascriptでyoutube data api v3のエンドポイントURLを指定し、APIリクエストをapiキーを使って有効化し、各動画情報を閲覧すると言った仕組みです<br><br>このコードはGitHub上で閲覧できます。また、このサービスを通して当社は本サイト掲載情報の利用によって利用者等に何らかの損害が発生したとしても、かかる損害については一切の責任を負いません。<br><br>本サイトは「りんた」によって作成されました。連絡については、discordの、<A href="https://discord.gg/DxEungZpce">私のdiscordサーバー(https://discord.gg/DxEungZpce)</A> または、raindrop#7658までお気軽にご連絡ください。</p>
+        <p>当サイトは、Googleが提供しているyoutubeの動画のサムネイル、タイトル、概要欄の一部が見れるサイトで、環境によってはYoutubeの動画の埋め込みが表示されます。<br><br>また、YouTubeの動画をダウンロード、視聴したい場合は、<A href="https://onlinevideoconverter.com/ja/youtube-converter">このサイト（外部サイト）</A>を使用してください<br><br>ざっくりとした説明は、Googleが提供しているyoutubeの動画が見られる「やつ」を使い、html js cssを使い、表示しています。<br><br>詳しい説明(developer向け)は、Googleが提供しているyoutubeの動画情報が取得できるapi、youtube data api v3を使い、google cloudでapiキーを取得し、javascriptでyoutube data api v3のエンドポイントURLを指定し、APIリクエストをapiキーを使って有効化し、各動画情報を閲覧すると言った仕組みです<br><br>このコードはGitHub上で閲覧できます。また、このサービスを通して当社は本サイト掲載情報の利用によって利用者等に何らかの損害が発生したとしても、かかる損害については一切の責任を負いません。<br><br>本サイトは「りんた」によって作成されました。連絡については、discordの、<A href="https://discord.gg/DxEungZpce">私のdiscordサーバー(https://discord.gg/DxEungZpce)</A> または、raindrop#7658までお気軽にご連絡ください。<br><br>変更ログ：googleで検索できるようになりました！（多分）</p>
       </div>
     </div>
     <script>
