--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>石ころビューアーVr,1.0.4</h1>
 <head>
-	<title>Dark/Light Mode Toggle</title>
+	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="script.js"></script>
 </head>
