--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<h1>石ころビューアーVr,1.2.0</h1>
+<h1>石ころビューアーVr,1.2.1</h1>
+<head>
+<meta name=”viewport” content=”width=device-width,initial-scale=1″>
+</head>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
