--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<h1>石ころビューアーVr,1.2.1</h1>
 <head>
-<meta name=”viewport” content=”width=device-width,initial-scale=1″>
-</head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+<h1>石ころビューアーVr,1.2.1</h1>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -188,3 +187,5 @@ function renderResults(items) {
 }
 </script>
 <script type="text/javascript" src="main.js"></script>
+</head>
+
