--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-<h1>石ころビューアーVr,1.2.2</h1>
+<h1>石ころビューアーVr,1.2.3</h1>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="script.js"></script>
 </head>
+<style>
+  /* ボタンのスタイルを設定 */
+  button {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    background-color: lightblue;
+    border: none;
+    border-radius: 10px;
+  }
+
+  /* ボタン同士の間隔を設定 */
+  button + button {
+    margin-left: 20px;
+  }
+</style>
 <body id=dark>
 	<button id="mode-toggle"> ダークモード</button>
 </body>
