--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-<h1>石ころビューアーVr,1.2.3</h1>
+<h1>石ころビューアーVr,1.2.4</h1>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -204,4 +206,4 @@ function renderResults(items) {
 </script>
 <script type="text/javascript" src="main.js"></script>
 </head>
-
+</html>
