--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-<h1>石ころビューアーVr,1.2.4</h1>
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="description" content="">
+  <meta property="og:title" content="">
+  <meta property="og:description" content="">
+  <meta property="og:site_name" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="./assets/ogp.jpg">
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:type" content="website">
+  <meta property="fb:app_id" content="">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="icon" type="image/png" href="./assets/favicon.png">
+  <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" sizes="180x180">
+<h1>石ころビューアーVr,1.2.5</h1>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -16,7 +32,7 @@
     font-size: 20px;
     background-color: lightblue;
     border: none;
-    border-radius: 10px;
+    border-radius: 48px;
   }
 
   /* ボタン同士の間隔を設定 */
