--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="robots" content="noindex, nofollow">
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="">
+  <meta name="description" content="name:石ころビューアー author:rinta">
   <meta property="og:title" content="">
   <meta property="og:description" content="">
   <meta property="og:site_name" content="">
