--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no">
   <meta name="description" content="name:石ころビューアー author:rinta">
-  <meta property="og:title" content="">
-  <meta property="og:description" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="./assets/ogp.jpg">
+  <meta property="og:title" content="石ころビューアー">
+  <meta property="og:description" content="name:石ころビューアー author:rinta">
+  <meta property="og:site_name" content="石ころビューアー">
+  <meta property="og:url" content="https://rintaro-s.github.io/ishikoro/">
   <meta property="og:locale" content="ja_JP">
   <meta property="og:type" content="website">
-  <meta property="fb:app_id" content="">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" sizes="180x180">
-<h1>石ころビューアーVr,1.2.6</h1>
+<h1>石ころビューアーVr,1.2.7</h1>
 <head>
 	<title>石ころビューアー</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
