--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" sizes="180x180">
-<h1>石ころビューアーVr,1.2.7</h1>
+<h1>石ころビューアーVr,1.2.8</h1>
 <head>
 	<title>石ころビューアー</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="script.js"></script>
 </head>
 <style>
   /* ボタンのスタイルを設定 */
@@ -34,7 +32,7 @@
 
   /* ボタン同士の間隔を設定 */
   button + button {
-    margin-left: 20px;
+    margin-left: 30px;
   }
 </style>
 <body id=dark>
@@ -78,7 +76,7 @@
     <div id="modal">
       <div id="modal-content">
         <span id="close">&times;</span>
-        <p style ="color:black">注意！googleにここを検索にヒットさせるようになった代わりりUIがバグりました！頑張って対処します。<br><br>当サイトは、Googleが提供しているyoutubeの動画のサムネイル、タイトル、概要欄の一部が見れるサイトで、環境によってはYoutubeの動画の埋め込みが表示されます。<br><br>また、YouTubeの動画をダウンロード、視聴したい場合は、<A href="https://onlinevideoconverter.com/ja/youtube-converter">このサイト（外部サイト）</A>を使用してください<br><br>ざっくりとした説明は、Googleが提供しているyoutubeの動画が見られる「やつ」を使い、html js cssを使い、表示しています。<br><br>詳しい説明(developer向け)は、Googleが提供しているyoutubeの動画情報が取得できるapi、youtube data api v3を使い、google cloudでapiキーを取得し、javascriptでyoutube data api v3のエンドポイントURLを指定し、APIリクエストをapiキーを使って有効化し、各動画情報を閲覧すると言った仕組みです<br><br>このコードはGitHub上で閲覧できます。また、このサービスを通して当社は本サイト掲載情報の利用によって利用者等に何らかの損害が発生したとしても、かかる損害については一切の責任を負いません。<br><br>本サイトは「りんた」によって作成されました。連絡については、discordの、<A href="https://discord.gg/DxEungZpce">私のdiscordサーバー(https://discord.gg/DxEungZpce)</A> または、raindrop#7658までお気軽にご連絡ください。<br><br>変更ログ：googleで検索できるようになりました！（多分）<br>既存のバグが修正されました</p>
+        <p style ="color:black">注意！googleに表示させるようにした代わりにUIがバグりました！頑張って対処します。<br><br>当サイトは、Googleが提供しているyoutubeの動画のサムネイル、タイトル、概要欄の一部が見れるサイトで、環境によってはYoutubeの動画の埋め込みが表示されます。<br><br>また、YouTubeの動画をダウンロード、視聴したい場合は、<A href="https://onlinevideoconverter.com/ja/youtube-converter">このサイト（外部サイト）</A>を使用してください<br><br>ざっくりとした説明は、Googleが提供しているyoutubeの動画が見られる「やつ」を使い、html js cssを使い、表示しています。<br><br>詳しい説明(developer向け)は、Googleが提供しているyoutubeの動画情報が取得できるapi、youtube data api v3を使い、google cloudでapiキーを取得し、javascriptでyoutube data api v3のエンドポイントURLを指定し、APIリクエストをapiキーを使って有効化し、各動画情報を閲覧すると言った仕組みです<br><br>このコードはGitHub上で閲覧できます。また、このサービスを通して当社は本サイト掲載情報の利用によって利用者等に何らかの損害が発生したとしても、かかる損害については一切の責任を負いません。<br><br>本サイトは「りんた」によって作成されました。連絡については、discordの、<A href="https://discord.gg/DxEungZpce">私のdiscordサーバー(https://discord.gg/DxEungZpce)</A> または、raindrop#7658までお気軽にご連絡ください。<br><br>変更ログ：googleで検索できるようになりました！（多分）<br>既存のバグが修正されました</p>
       </div>
     </div>
     <script>
@@ -96,16 +94,42 @@
     </script>
   </body>
 <style>
-.search-box {
-    position: relative;
-    width: 70%;
-    transform: translate(0%, -10%);
+.searchbox {
+  position: relative;
+  width: 200px;
+  height: 40px;
+}
+.searchbox a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+.searchbox input {
+  position: absolute;
+  top: 0;
+  left: -200px;
+  width: 200px;
+  height: 40px;
+  border: none;
+  outline: none;
+  padding-left: 10px;
+  background-color: #eee;
+  transition: all .5s ease-in-out;
+}
+.searchbox input:focus {
+  left: 0;
 }
   }
 </style>
-<input type="text" id="search-box" placeholder="検索する言葉を入力してください...">
+<div class="searchbox">
+<a href="#"><img src="icon.png" alt="虫眼鏡"></a>
+<input type="text" name="search" id="search-box" placeholder="検索ワード入力">
+</div>
   <div id="results"></div>
-<script type="text/javascript" src="main.js"></script>
 <style>
 h1 {
   position: relative;
@@ -217,6 +241,5 @@ function renderResults(items) {
     });
 }
 </script>
-<script type="text/javascript" src="main.js"></script>
 </head>
 </html>
