--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" sizes="180x180">
-<h1>石ころビューアーVr,1.2.8</h1>
+<h1>石ころビューアーVr,1.3.0</h1>
 <head>
 	<title>石ころビューアー</title>
 </head>
@@ -217,4 +217,97 @@ function renderResults(items) {
 }
 </script>
 </head>
+<head>
+  <style>
+    body {
+      background-color: #00ccff;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+    }
+
+    .shape {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-color: #00bfff;
+      animation: moveShape 6s infinite linear alternate, rotateShape 10s infinite linear;
+      transform-origin: center;
+    }
+
+    .shape:nth-child(2) {
+      width: 120px;
+      height: 120px;
+      background-color: #0066cc;
+      animation: moveShape 8s infinite linear alternate, rotateShape 12s infinite linear;
+    }
+
+    .shape:nth-child(3) {
+      width: 80px;
+      height: 80px;
+      background-color: #0099ff;
+      animation: moveShape 4s infinite linear alternate, rotateShape 8s infinite linear;
+    }
+
+    @keyframes moveShape {
+      0% {
+        left: 0;
+        top: 0;
+      }
+      25% {
+        left: calc(100% - 100px);
+        top: 0;
+      }
+      50% {
+        left: calc(100% - 100px);
+        top: calc(100% - 100px);
+      }
+      75% {
+        left: 0;
+        top: calc(100% - 100px);
+      }
+      100% {
+        left: 0;
+        top: 0;
+      }
+    }
+
+    @keyframes rotateShape {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="shape"></div>
+    <div class="shape"></div>
+    <div class="shape"></div>
+  </div>
+
+  <script>
+    function addShapes() {
+      const container = document.querySelector('.container');
+      for (let i = 0; i < 6; i++) {
+        const shape = document.createElement('div');
+        shape.classList.add('shape');
+        shape.style.animationDelay = `${i * 0.3}s`;
+        container.appendChild(shape);
+      }
+    }
+
+    addShapes();
+  </script>
+</body>
 </html>
